ensure some comfortable spacing in factor tables

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -206,6 +206,7 @@ body {
 
 .index {
     white-space: nowrap;
+    line-height: 2em;
 }
 
 .expr {
